# Global settings
[workspace]
members = [".", "cli", "web"]

[profile.release]
lto = true

[package]
name = "phar"
version = "0.0.3"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/phar"
homepage = "https://github.com/SOF3/phar"
readme = "README.md"
description = "Rust library for PHP phar format"

[dependencies]
auto_enums = {version = "0.7.12", features = ["transpose_methods"]}
byteorder = "1.4.2"
bzip2 = {version = "0.4.1", optional = true}
cfg-if = "1.0.0"
crc32fast = {version = "1.2.1", optional = true}
digest = {version = "0.9.0", optional = true}
flate2 = {version = "1.0.19", optional = true}
itertools = "0.10.0"
md-5 = {version = "0.9.1", optional = true}
sha-1 = {version = "0.9.2", optional = true}
sha2 = {version = "0.10.2", optional = true}
shallow-tees = "0.1.1"
smallvec = "1.6.1"
takes = "0.1.0"
typed-builder = "0.10.0"
walkdir = "2.3.1"

[features]
default = ["reader", "writer", "sig-md5", "sig-sha1", "sig-sha2", "comp-zlib", "comp-bzip"]
reader = []
writer = ["crc32fast"]
sig-md5 = ["md-5", "digest"]
sig-sha1 = ["sha-1", "digest"]
sig-sha2 = ["sha2", "digest"]
comp-zlib = ["flate2"]
comp-bzip = ["bzip2"]
docsrs = []

[package.metadata.docs.rs]
all-features = true
