[package]
name = "phar-browse"
description = "Manipulate phar format on the browser"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
categories = ["compression", "encoding", "wasm"]
readme = "README.md"
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.38"
byte-unit = "5.1.3"
console_error_panic_hook = "0.1.5"
gloo-file = "0.3.0"
js-sys = "0.3.46"
log = "0.4.14"
wasm-bindgen = "0.2.45"
web-sys = "0.3.46"
yew = "0.19.3"

[dependencies.phar]
version = "0.0.3"
default-features = false
features = [
	"sig-md5",
	"sig-sha1",
	"sig-sha2",
	"comp-zlib",
	"reader",
	"writer",
]
path = ".."
